// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenData snapshot w/o token data 1`] = `
<form
  className="pf-c-form"
  noValidate={true}
>
  <div
    className="pf-c-form__group"
  >
    <div
      className="pf-c-form__group-label"
    >
      <label
        className="pf-c-form__label"
        htmlFor="token-data-label"
      >
        <span
          className="pf-c-form__label-text"
        >
          Token
        </span>
      </label>
       
    </div>
    <div
      className="pf-c-form__group-control"
    >
      <input
        aria-describedby="token-data-label"
        aria-invalid={false}
        aria-label="Token"
        className="pf-c-form-control"
        data-ouia-component-id="OUIA-Generated-TextInputBase-1"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe={true}
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter a Token"
        required={false}
        type="password"
        value=""
      />
    </div>
  </div>
</form>
`;

exports[`TokenData snapshot with token data 1`] = `
<form
  className="pf-c-form"
  noValidate={true}
>
  <div
    className="pf-c-form__group"
  >
    <div
      className="pf-c-form__group-label"
    >
      <label
        className="pf-c-form__label"
        htmlFor="token-data-label"
      >
        <span
          className="pf-c-form__label-text"
        >
          Token
        </span>
      </label>
       
    </div>
    <div
      className="pf-c-form__group-control"
    >
      <input
        aria-describedby="token-data-label"
        aria-invalid={false}
        aria-label="Token"
        className="pf-c-form-control"
        data-ouia-component-id="OUIA-Generated-TextInputBase-2"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe={true}
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Replace Token"
        required={false}
        type="password"
        value=""
      />
    </div>
  </div>
</form>
`;
